--- a/CarChronicles/index.html
+++ b/CarChronicles/index.html
@@ -14,30 +14,34 @@
 <body>
     <div class="header">
         <header class="header-container">
-            <a>
-                <img src=""
+            <a href="index.html" target="_self" class="logo">
+                <img src="Screenshot 2025-02-08 001047.png" alt="CarChronicles"
+                    style="height: 40px; width: 7   0px; align-self: start;">
             </a>
-            <div class="navbar">
-                <nav>
-                    <ul>
-                        <a href="home.html">Home</a>
-                        <a href="brands.html">Brands</a>
-                        <a href="categories.html">Categories</a>
-                        <a href="country.html">Country of Origin</a>
-                        <input type="search" name="explore" id="explore" placeholder="Explore">
-                    </ul>
-                </nav>
-            </div>
-            <div class="welcome">
-                <h1 class="greet">Welcome to <i style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">CarChronicles</i></h1>
-                <h4 class="description">Discover the world of cars like never before! From classic legends to futuristic marvels, we take
-                    you on an exciting journey exploring automobiles from every corner of the globe. Whether you're a car
-                    enthusiast, a history buff, or just curious about different makes and models, you've come to the
-                    right place.
-                </h4>
-            </div>
+            
+            <nav class="navbar">
+
+                <a href="home.html" class="nav-link">Home</a>
+                <a href="brands.html" class="nav-link">Brands</a>
+                <a href="categories.html" class="nav-link">Categories</a>
+                <a href="country.html" class="nav-link">Country of Origin</a>
+            </nav>
+            <input class="search" type="search" name="explore" id="explore" placeholder="Explore">
+            <button type="button" class="menu"><img src="icons8-menu-64.png" alt="menu-button" class="mennu-icon" style="height: 20px; width: 10;"></button>
         </header>
     </div>
+        <div class="welcome">
+            <h1 class="greet">Welcome to <i
+                    style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">CarChronicles</i>
+            </h1>
+            <h4 class="description">Discover the world of cars like never before! From classic legends to futuristic
+                marvels, we take
+                you on an exciting journey exploring automobiles from every corner of the globe. Whether you're a car
+                enthusiast, a history buff, or just curious about different makes and models, you've come to the
+                right place.
+            </h4>
+        </div>
+    
     <div class="sidebar">
         <aside>
             <a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a>
