--- a/CarChronicles/index.html
+++ b/CarChronicles/index.html
@@ -18,7 +18,7 @@
                 <img src="Screenshot 2025-02-08 001047.png" alt="CarChronicles"
                     style="height: 40px; width: 7   0px; align-self: start;">
             </a>
-            
+
             <nav class="navbar">
 
                 <a href="home.html" class="nav-link">Home</a>
@@ -27,33 +27,38 @@
                 <a href="country.html" class="nav-link">Country of Origin</a>
             </nav>
             <input class="search" type="search" name="explore" id="explore" placeholder="Explore">
-            <button type="button" class="menu"><img src="icons8-menu-64.png" alt="menu-button" class="mennu-icon" style="height: 20px; width: 10;"></button>
+            <button type="button" class="menu"><img src="icons8-menu-64.png" alt="menu-button" class="mennu-icon"
+                    style="height: 20px; width: 10;"></button>
         </header>
     </div>
+    <main>
         <div class="welcome">
-            <h1 class="greet">Welcome to <i
-                    style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">CarChronicles</i>
-            </h1>
-            <h4 class="description">Discover the world of cars like never before! From classic legends to futuristic
-                marvels, we take
-                you on an exciting journey exploring automobiles from every corner of the globe. Whether you're a car
-                enthusiast, a history buff, or just curious about different makes and models, you've come to the
-                right place.
-            </h4>
+            <div>
+                <h1>Welcome to <i
+                        style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-weight: bolder;">CarChronicles</i>
+                </h1>
+                <h4>Discover the world of cars like never before! From classic legends to futuristic
+                    marvels, we take
+                    you on an exciting journey exploring automobiles from every corner of the globe. Whether you're a
+                    car
+                    enthusiast, a history buff, or just curious about different makes and models, you've come to the
+                    right place.
+                </h4>
+            </div>
+            <div>
+                <img src="1947_Ferrari_166_Inter_Touring_Berlinetta_0043S_-_fvl.jpg" alt="image of a car"
+                    style="display: flex; height: 300px; width: 300px; border-radius: 5px; border: 0.5px steelblue;">
+            </div>
         </div>
-    
-    <div class="sidebar">
-        <aside>
-            <a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a>
-        </aside>
-    </div>
-    <div class="main">
-        <main>
 
-        </main>
-    </div>
+        <div class="sidebar">
+            <aside>
+                <a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a>
+            </aside>
+        </div>
+    </main>
     <footer>
-        &copy;CarChronicles&nbsp;&nbsp;&nbsp;Shashank&nbsp;Naragundmath
+        &copy;CarChronicles&nbsp;
     </footer>
 </body>
 
